# OAOptimization

./: .gitignore  README.md  conda.yml  oao.yml  pyproject.toml  setup.py
demo/: experiment_bo.json  hartmann6_demo.py
oao/: __init__.py  analytics.py  common.py  handler.py  objective.py  optimizer.py  results.py  space.py  strategy.py  utilities.py  utils.py
oao/optim/: __init__.py  objective.py  optimizer.py  uninformed.py
scripts/: config.py  demo.py
tests/: mwe.py  test_e2e.sh  test_grid.py  test_inputs.py
